# W55RP20_NET_HDMI

./: CMakeLists.txt  README.md  W55RP20_SSM_ETHER_HDMI.cpp  test_hdmi_tcp1.hpp  test_tcp_loopback.hpp  w5500_config_tcp.h
PicoDVI/: CMakeLists.txt
PicoDVI/include/: common_dvi_pin_configs.h
PicoDVI/libdvi/: tmds_encode.h
PicoDVI/libsprite/: affine_transform.h  sprite.h  tile.h
ioLibrary_Driver/Ethernet/: wizchip_conf.c  wizchip_conf.h
ioLibrary_Driver/Ethernet/w5500/: w5x00_spi.h  wiznet_spi_pio.pio.h
ioLibrary_Driver/Internet/httpServer/: httpServer.c  httpServer.h
